<resources>
    <string name="app_name">SmartWeather</string>
    <string name="titulo2">SmartWeather</string>
    <string name="usario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="olvidasteContraseña">¿Olvidaste tu contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenido">¡Bienvenido a SmartWeather!</string>
    <string name="alarmas">Mis alarmas</string>
    <string name="alarmaUno">Alarma uno</string>
    <string name="alarmaUnoHora">05:00 AM</string>
    <string name="alarmaUnotemp">≥ 5 °C</string>
    <string name="alarmaDos">Alarma Bicicleta</string>
    <string name="alarmaDosHora">06:15 AM</string>
    <string name="alarmaDostemp">≥ 5 °C</string>
    <string name="alarmaTres">Alarma Trabajo</string>
    <string name="alarmaTresHora">07:00 AM</string>
    <string name="alarmaTrestemp">≥ 10 °C</string>
    <string name="crearalarma">Crear alarma</string>
    <string name="nombredealarma">Nombre de la alarma</string>
    <string name="historial_de_alarmas">Historial de Alarmas</string>
</resources>